--- a/Controls/TabEndItem.xaml
+++ b/Controls/TabEndItem.xaml
@@ -5,17 +5,23 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" SharedSizeGroup="Answer"/>
+            <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="Auto" SharedSizeGroup="NextName"/>
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="40"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="answerTxt" Grid.Column="0"
+        <Border Grid.ColumnSpan="6" Background="{StaticResource nodeBgBrush}"
+                BorderThickness="0,1,0,1" BorderBrush="{StaticResource mainColorBrush}"/>
+        <TextBlock x:Name="answerTxt" Grid.Column="0" Margin="4,2,4,2"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock x:Name="postNameTxt" Grid.Column="1"
+        <Path Grid.Column="1" Stroke="Black" StrokeThickness="1" Data="M0,4 L24,4 M20,0 24,4 L20,8"
+              HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBlock x:Name="postNameTxt" Grid.Column="2" Margin="4,2,4,2"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="nextBtn" Grid.Column="2" Content=">"
+        <Button x:Name="nextBtn" Grid.Column="3" Content=">"
                 Click="nextBtn_Click" Template="{StaticResource generalButtonTemplate}"/>
-        <Button x:Name="changeBtn" Grid.Column="3" Content="E"
+        <Button x:Name="changeBtn" Grid.Column="4" Content="E"
                 Click="changeBtn_Click" Template="{StaticResource generalButtonTemplate}"/>
     </Grid>
 </UserControl>
