--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -7,21 +7,70 @@
                    xmlns:c="clr-namespace:MultiBranchTexter.Controls"
                    Style="{StaticResource MetroWindowStyle}"
                    mc:Ignorable="d"
-                   Title="MainWindow" Height="450" Width="800"
+                   Title="MultiBranchTexter" Height="450" Width="800"
                    KeyDown="MainWindow_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="28"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <Button x:Name="frontBtn" Content="回到首页" 
-                HorizontalAlignment="Left" Width="Auto"
-                Template="{StaticResource generalButtonTemplate}"
-                Grid.Row="0" Click="frontBtn_Click"/>
-        <TabControl x:Name="workTabControl" Grid.Row="1" Padding="0"/>
-        <c:FlowChartContainer x:Name="flowChart" Grid.Row="1"/>
-
+        <Rectangle Grid.Row="0" Fill="{StaticResource mainColorBrush}"/>
+        
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"
+                    Grid.Row="0">
+            <Button x:Name="frontBtn" Content="回到首页"
+                    HorizontalAlignment="Left" Width="Auto"
+                    Template="{StaticResource generalButtonTemplate}"
+                    Grid.Row="0" Click="frontBtn_Click"/>
+            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+                       Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+            <Button x:Name="fontDownBtn" Width="28"
+                    ToolTip="字体缩小" Click="FontBtn_Click"
+                    Template="{StaticResource generalButtonTemplate}">
+                <Path Stroke="White" StrokeThickness="1"
+                      Data="M0,16 5,4 L10,16 M2,11 L8,11
+                      M12,16 14,11.2 16,16
+                      M10,4 16,4"/>
+            </Button>
+            <Button x:Name="fontUpBtn" Width="28"
+                    ToolTip="字体放大" Click="FontBtn_Click"
+                    Template="{StaticResource generalButtonTemplate}">
+                <Path Stroke="White" StrokeThickness="1"
+                      Data="M6,16 11,4 L16,16 M8,11 L14,11
+                      M0,16 2,11.2 4,16
+                      M0,4 6,4 M3,1 3,7"/>
+            </Button>
+            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+                       Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+            <TextBlock x:Name="fileNameTxt" TextAlignment="Left" Width="400" 
+                       Foreground="White" Margin="10,0,0,0"
+                       VerticalAlignment="Center">
+                <TextBlock.Style>
+                    <Style TargetType="{x:Type TextBlock}">
+                        <Setter Property="ToolTip" Value="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                        <Style.Triggers>
+                            <Trigger Property="Text" Value="">
+                                <Setter Property="ToolTip" Value="{x:Null}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </TextBlock.Style>
+            </TextBlock>
+            <Button x:Name="fileBtn" Content="浏览" Width="Auto"
+                    Template="{StaticResource generalButtonTemplate}"
+                    Click="fileBtn_Click"/>
+        </StackPanel>
+        <!--没有加载文件时的提示文本-->
+        <StackPanel Grid.Row="1" Orientation="Vertical" 
+                    HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="欢迎使用多分支文本编辑器"
+                       Foreground="White" FontSize="24"/>
+            <TextBlock Text="请点击“浏览”或按下Ctrl+O打开导航文件"
+                       Foreground="White" FontSize="24"/>
+        </StackPanel>
+        <!--正式的两个工作控件-->
+        <TabControl x:Name="workTabControl" Grid.Row="1" Padding="0" Visibility="Hidden"/>
+        <c:FlowChartContainer x:Name="flowChart" Grid.Row="1" Visibility="Hidden"/>
     </Grid>
 
 </local:MetroWindow>
