--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -15,13 +15,53 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Rectangle Grid.Row="0" Fill="{StaticResource mainColorBrush}"/>
-        
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"
                     Grid.Row="0">
-            <Button x:Name="frontBtn" Content="回到首页"
-                    HorizontalAlignment="Left" Width="Auto"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Grid.Row="0" Click="frontBtn_Click"/>
+            <Button x:Name="newFileBtn" Width="28"
+                    ToolTip="新建文件"
+                    Template="{StaticResource generalButtonTemplate}">
+                <Path Stroke="White" StrokeThickness="1"
+                      Data="M0,9 L6,9 M3,6 3,12
+                      M2,5 2,0 9,0 12,3 12,14 2,14 L2,13
+                      M9,0 9,3 L12,3"/>
+            </Button>
+            <Button x:Name="openFileBtn" Width="28"
+                    ToolTip="打开文件"
+                    Template="{StaticResource generalButtonTemplate}">
+                <Path Stroke="White" StrokeThickness="1"
+                      Data="M1,12 13,12 16,6 4,6 Z
+                      M1,12 0,12 0,4 2,2 6,2 8,4 13,4 L13,6"/>
+            </Button>
+            <Button x:Name="saveFileBtn" Width="28"
+                    ToolTip="保存文件"
+                    Template="{StaticResource generalButtonTemplate}">
+                <Path Stroke="White" StrokeThickness="1"
+                      Data="M0,14 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 Z
+                      M4,0 6,0 L6,4"/>
+            </Button>
+            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+                       Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+            <CheckBox x:Name="flowChartBtn" Width="28" Tag="r" ToolTip="节点图"
+                      Style="{StaticResource generalCheckBoxStyle}" IsChecked="True" IsEnabled="False"
+                      Click="frontBtn_Click">
+                <Path Stroke="{Binding Foreground, 
+                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" 
+                      StrokeThickness="1"
+                      Data="M0,0 0,3 6,3 6,0 Z
+                      M3,3 L3,11 M11,3 11,7 5,7 L5,11
+                      M1,11 1,14 7,14 7,11 Z
+                      M8,0 8,3 14,3 14,0 Z"/>
+            </CheckBox>
+            <CheckBox x:Name="workTabBtn" Width="28" Tag="l" ToolTip="文本页"
+                      Style="{StaticResource generalCheckBoxStyle}"
+                      Click="frontBtn_Click">
+                <Path Stroke="{Binding Foreground, 
+                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" 
+                      StrokeThickness="1"
+                      Data="M0,0 L14,0
+                      M0,4 L14,4 M0,8 L9,8 M0,12 L14,12"/>
+            </CheckBox>
             <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
                        Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
             <Button x:Name="fontDownBtn" Width="28"
@@ -65,12 +105,20 @@
                     HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="欢迎使用多分支文本编辑器"
                        Foreground="White" FontSize="24"/>
-            <TextBlock Text="请点击“浏览”或按下Ctrl+O打开导航文件"
+            <TextBlock Text="请点击[浏览]或按下Ctrl+O打开导航文件"
                        Foreground="White" FontSize="24"/>
         </StackPanel>
         <!--正式的两个工作控件-->
-        <TabControl x:Name="workTabControl" Grid.Row="1" Padding="0" Visibility="Hidden"/>
-        <c:FlowChartContainer x:Name="flowChart" Grid.Row="1" Visibility="Hidden"/>
+        <Grid x:Name="workGrid" Grid.Row="1" Visibility="Hidden">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{Binding FlowChartWidth, 
+                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+                <ColumnDefinition Width="{Binding WorkTabWidth, 
+                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+            </Grid.ColumnDefinitions>
+            <c:FlowChartContainer x:Name="flowChart" Grid.Column="0" />
+            <TabControl x:Name="workTabControl" Grid.Column="1" Padding="0"/>
+        </Grid>
     </Grid>
 
 </local:MetroWindow>
