--- a/Controls/Panel/FlowChartContainer.xaml
+++ b/Controls/Panel/FlowChartContainer.xaml
@@ -9,7 +9,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <ScrollViewer x:Name="scrollViewer" Background="White"
+        <ScrollViewer x:Name="scrollViewer" Background="{DynamicResource MainBrush}"
                       FocusVisualStyle="{x:Null}"
                       PreviewMouseDown="scrollViewer_PreviewMouseDown"
                       PreviewMouseUp="scrollViewer_PreviewMouseUp"
@@ -60,14 +60,14 @@
         <!--下方信息栏-->
         <StackPanel Orientation="Horizontal" 
                     Grid.Row="1" 
-                    Background="{StaticResource mainColorBrush}">
+                    Background="{StaticResource ThemeBrush}">
             <TextBlock x:Name="stateHint" Width="Auto"
                        MinWidth="80" Foreground="White"
                        VerticalAlignment="Center"/>
             <Rectangle Width="1" Fill="White" Margin="4,0,4,0"/>
             <TextBlock Text="{Binding ScaleRatio, 
                 Converter={StaticResource numToPerCvt}, 
-                ElementName=container}" Width="Auto" Foreground="White"
+                ElementName=container}" Width="Auto" Foreground="{DynamicResource Foreground.ThemeBrush}"
                        VerticalAlignment="Center"/>
         </StackPanel>
     </Grid>
