--- a/Controls/ConnectingLine.xaml
+++ b/Controls/ConnectingLine.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MultiBranchTexter.ConnectingLine"
+﻿<UserControl x:Class="MultiBranchTexter.Controls.ConnectingLine"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              HorizontalAlignment="Left"
