--- a/Controls/Node/NodeEndMA.xaml
+++ b/Controls/Node/NodeEndMA.xaml
@@ -7,16 +7,16 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="24"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="20"/>
+            <RowDefinition Height="24"/>
         </Grid.RowDefinitions>
         <Border Padding="6,0,6,0" Grid.Row="0"
-                Background="{StaticResource nodeBgBrush}" BorderBrush="DarkRed"
+                Background="{StaticResource NodeBgBrush}" BorderBrush="{DynamicResource ThemeBrush}"
                 BorderThickness="1" CornerRadius="4">
             <Grid>
                 <Rectangle Margin="1"
                            VerticalAlignment="Bottom" Fill="Gray" Height="2"/>
                 <TextBox x:Name="titleBox" Margin="1"
-                         Focusable="False"
+                         Focusable="False" Background="Transparent"
                          ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"
                          Template="{StaticResource textBoxTemplate}"
                          PreviewMouseDoubleClick="titleBox_PreviewMouseDoubleClick"
@@ -24,6 +24,8 @@
             </Grid>
         </Border>
         <StackPanel x:Name="answerContainer" Orientation="Vertical" Grid.Row="1"/>
-        <Button x:Name="addBtn" Grid.Row="2" Width="40" Content="+" Click="addBtn_Click"/>
+        <Button x:Name="addBtn" Grid.Row="2" Width="40" Click="addBtn_Click"
+                Tag="t" 
+                Template="{StaticResource addAnswerButtonTemplate}"/>
     </Grid>
 </c:NodeBase>
