--- a/Controls/NodeSearchBox.xaml
+++ b/Controls/NodeSearchBox.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiBranchTexter.Controls"
              Height="56" Width="160">
-    <Grid Background="{StaticResource mainColorBrush}">
+    <Grid Background="{StaticResource ThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
