--- a/Controls/TabEndItem.xaml
+++ b/Controls/TabEndItem.xaml
@@ -11,24 +11,19 @@
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Border Grid.ColumnSpan="6" Background="{StaticResource nodeBgBrush}"
-                BorderThickness="0,1,0,1" BorderBrush="{StaticResource mainColorBrush}"/>
+        <Border Grid.ColumnSpan="6" Background="{StaticResource NodeBgBrush}"
+                BorderThickness="0,1,0,1" BorderBrush="{StaticResource ThemeBrush}"/>
         <TextBlock x:Name="answerTxt" Grid.Column="0" Margin="4,2,4,2"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Path Grid.Column="1" Stroke="Black" StrokeThickness="1" Data="M0,4 L24,4 M20,0 24,4 L20,8"
               HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock x:Name="postNameTxt" Grid.Column="2" Margin="4,2,4,2"
                    HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="nextBtn" Grid.Column="3" ToolTip="转到相应节点"
-                Click="nextBtn_Click" Template="{StaticResource generalButtonTemplate}">
-            <Path HorizontalAlignment="Center" VerticalAlignment="Center"
-                  Fill="White" Data="M0,0 0,8 6,4Z"/>
-        </Button>
+        <Button x:Name="nextBtn" Grid.Column="3" ToolTip="转到相应节点" Tag="f"
+                Click="nextBtn_Click" Template="{StaticResource generalButtonTemplate}"
+                Content="M0,0 0,8 6,4Z"/>
         <Button x:Name="changeBtn" Grid.Column="4" ToolTip="回首页编辑"
-                Click="changeBtn_Click" Template="{StaticResource generalButtonTemplate}">
-            <Path HorizontalAlignment="Center" VerticalAlignment="Center"
-                  StrokeThickness="1"
-                  Stroke="White" Data="M4,0 8,0 8,6 L0,6 M1,0 L1,3"/>
-        </Button>
+                Click="changeBtn_Click" Template="{StaticResource generalButtonTemplate}"
+                Content="M4,0 8,0 8,6 L0,6 M1,0 L1,3"/>
     </Grid>
 </UserControl>
