--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -9,104 +9,95 @@
                    mc:Ignorable="d"
                    Title="MultiBranchTexter" Height="450" Width="800"
                    KeyDown="MainWindow_KeyDown">
-    <Grid>
+    <Grid Background="{StaticResource BaseBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="28"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Rectangle Grid.Row="0" Fill="{StaticResource mainColorBrush}"/>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"
                     Grid.Row="0">
             <Button x:Name="newFileBtn" Width="28"
                     ToolTip="新建文件"
-                    Template="{StaticResource generalButtonTemplate}">
-                <Path Stroke="White" StrokeThickness="1"
-                      Data="M0,9 L6,9 M3,6 3,12
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M0,9 L6,9 M3,6 3,12
                       M2,5 2,0 9,0 12,3 12,14 2,14 L2,13
                       M9,0 9,3 L12,3"/>
-            </Button>
             <Button x:Name="openFileBtn" Width="28"
                     ToolTip="打开文件"
-                    Template="{StaticResource generalButtonTemplate}">
-                <Path Stroke="White" StrokeThickness="1"
-                      Data="M1,12 13,12 16,6 4,6 Z
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M1,12 13,12 16,6 4,6 Z
                       M1,12 0,12 0,4 2,2 6,2 8,4 13,4 L13,6"/>
-            </Button>
             <Button x:Name="saveFileBtn" Width="28"
                     ToolTip="保存文件"
-                    Template="{StaticResource generalButtonTemplate}">
-                <Path Stroke="White" StrokeThickness="1"
-                      Data="M0,14 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 Z
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M0,14 0,0 3,0 3,5 8,5 8,0 9,0 12,3 12,14 Z
                       M4,0 6,0 L6,4"/>
-            </Button>
-            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+            <Separator Width="1" Margin="4" Background="{StaticResource ThemeBrush}" Opacity="0.5"
                        Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
             <CheckBox x:Name="flowChartBtn" Width="28" Tag="r" ToolTip="节点图"
                       Style="{StaticResource generalCheckBoxStyle}" IsChecked="True" IsEnabled="False"
-                      Click="frontBtn_Click">
-                <Path Stroke="{Binding Foreground, 
-                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" 
-                      StrokeThickness="1"
-                      Data="M0,0 0,3 6,3 6,0 Z
+                      Click="frontBtn_Click"
+                      Content="M0,0 0,3 6,3 6,0 Z
                       M3,3 L3,11 M11,3 11,7 5,7 L5,11
                       M1,11 1,14 7,14 7,11 Z
                       M8,0 8,3 14,3 14,0 Z"/>
-            </CheckBox>
             <CheckBox x:Name="workTabBtn" Width="28" Tag="l" ToolTip="文本页"
                       Style="{StaticResource generalCheckBoxStyle}"
-                      Click="frontBtn_Click">
-                <Path Stroke="{Binding Foreground, 
-                    RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" 
-                      StrokeThickness="1"
-                      Data="M0,0 L14,0
+                      Click="frontBtn_Click"
+                      Content="M0,0 L14,0
                       M0,4 L14,4 M0,8 L9,8 M0,12 L14,12"/>
-            </CheckBox>
-            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+            <Separator Width="1" Margin="4" Background="{StaticResource ThemeBrush}" Opacity="0.5"
                        Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
             <Button x:Name="fontDownBtn" Width="28"
                     ToolTip="字体缩小" Click="FontBtn_Click"
-                    Template="{StaticResource generalButtonTemplate}">
-                <Path Stroke="White" StrokeThickness="1"
-                      Data="M0,16 5,4 L10,16 M2,11 L8,11
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M0,16 5,4 L10,16 M2,11 L8,11
                       M12,16 14,11.2 16,16
                       M10,4 16,4"/>
-            </Button>
             <Button x:Name="fontUpBtn" Width="28"
                     ToolTip="字体放大" Click="FontBtn_Click"
-                    Template="{StaticResource generalButtonTemplate}">
-                <Path Stroke="White" StrokeThickness="1"
-                      Data="M6,16 11,4 L16,16 M8,11 L14,11
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M6,16 11,4 L16,16 M8,11 L14,11
                       M0,16 2,11.2 4,16
                       M0,4 6,4 M3,1 3,7"/>
-            </Button>
-            <Separator Width="1" Margin="4" Background="{StaticResource mainHighBrush}"
+            <Separator Width="1" Margin="4" Background="{StaticResource ThemeBrush}" Opacity="0.5"
                        Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
-            <TextBlock x:Name="fileNameTxt" TextAlignment="Left" Width="400" 
-                       Foreground="White" Margin="10,0,0,0"
+            <Border Margin="6,2,6,0" BorderThickness="1,0,0,1" BorderBrush="{StaticResource ThemeBrush}">
+                <TextBlock x:Name="fileNameTxt" TextAlignment="Left" Width="400" 
+                           Foreground="{StaticResource Foreground.BaseBrush}" Margin="4,0,0,0"
                        VerticalAlignment="Center">
-                <TextBlock.Style>
-                    <Style TargetType="{x:Type TextBlock}">
-                        <Setter Property="ToolTip" Value="{Binding Text, RelativeSource={RelativeSource Self}}"/>
-                        <Style.Triggers>
-                            <Trigger Property="Text" Value="">
-                                <Setter Property="ToolTip" Value="{x:Null}"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
-            <Button x:Name="fileBtn" Content="浏览" Width="Auto"
-                    Template="{StaticResource generalButtonTemplate}"
-                    Click="fileBtn_Click"/>
+                    <TextBlock.Style>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="ToolTip" Value="{Binding Text, RelativeSource={RelativeSource Self}}"/>
+                            <Style.Triggers>
+                                <Trigger Property="Text" Value="">
+                                    <Setter Property="ToolTip" Value="{x:Null}"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Border>
+            <Button x:Name="fileBtn" Width="28" 
+                    Click="fileBtn_Click" ToolTip="浏览文件"
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M6,10 10,12 14,10 16,6 14,2 10,0 6,2 4,6 Z
+                    M6,10 L0,16"/>
+            <Separator Width="1" Margin="4" Background="{StaticResource ThemeBrush}" Opacity="0.5"
+                       Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+            <Button x:Name="outPutBtn" Width="28"
+                    ToolTip="导出"
+                    Style="{StaticResource generalButtonStyle}"
+                    Content="M0,0 6,6 L0,12 M8,0 14,6 L8,12"/>
         </StackPanel>
         <!--没有加载文件时的提示文本-->
         <StackPanel Grid.Row="1" Orientation="Vertical" 
                     HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock Text="欢迎使用多分支文本编辑器"
-                       Foreground="White" FontSize="24"/>
+                       Foreground="{DynamicResource Foreground.BaseBrush}" FontSize="24"/>
             <TextBlock Text="请点击[浏览]或按下Ctrl+O打开导航文件"
-                       Foreground="White" FontSize="24"/>
+                       Foreground="{DynamicResource Foreground.BaseBrush}" FontSize="24"/>
         </StackPanel>
         <!--正式的两个工作控件-->
         <Grid x:Name="workGrid" Grid.Row="1" Visibility="Hidden">
