--- a/Controls/Node/NodeButton.xaml
+++ b/Controls/Node/NodeButton.xaml
@@ -13,7 +13,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Border x:Name="bgBorder" Padding="10,4,10,4" Grid.Row="0"
-                        Background="{StaticResource NodeBgBrush}" 
+                        Background="{DynamicResource NodeBgBrush}" 
                         BorderBrush="{DynamicResource ThemeBrush}"
                         MouseLeftButtonDown="nodeButton_MouseLeftButtonDown"
                         MouseMove="nodeButton_MouseMove"
@@ -41,27 +41,29 @@
                         <TextBox x:Name="titleBox" Margin="2" Grid.Row="0"
                                  Focusable="False" Background="Transparent"
                                  ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"
-                                 Template="{StaticResource textBoxTemplate}"
                                  PreviewMouseDoubleClick="titleBox_PreviewMouseDoubleClick"
                                  LostFocus="titleBox_LostFocus"/>
                         <Button x:Name="gotoBtn" Grid.Row="1"
                                 Margin="8,-2,8,-4" Tag="f"
-                                Template="{StaticResource generalButtonTemplate}" 
+                                Template="{DynamicResource generalButtonTemplate}" 
                                 Click="gotoBtn_Click"
                                 Content="M0,0 0,10 8,5Z"/>
                     </Grid>
                 </Border>
                 <!--等待点击-->
-                <Border x:Name="UpperBd" Background="Aqua" Grid.Row="0" Opacity="0.5"
+                <Border x:Name="UpperBd" Background="#FFB2E4E4" Grid.Row="0" Opacity="0.9"
                         MouseDown="UpperBd_MouseDown" CornerRadius="4"
-                        Visibility="Hidden"/>
+                        Visibility="Hidden">
+                    <TextBlock Text="点击以设置为&#x000A;新的后继节点" IsHitTestVisible="False"
+                               HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </Border>
                 <!--尾巴放置容器-->
                 <Border x:Name="endContainer" Grid.Row="1"/>
             </Grid>
             
             <ControlTemplate.Triggers>
                 <Trigger Property="IsMouseOver" Value="True" SourceName="bgBorder">
-                    <Setter Property="Background" Value="{StaticResource NodeBgHBrush}" TargetName="bgBorder"/>
+                    <Setter Property="Background" Value="{DynamicResource NodeBgHBrush}" TargetName="bgBorder"/>
                 </Trigger>
                 <Trigger Property="NodeState" Value="Selected">
                     <Setter Property="BorderBrush" Value="Red" TargetName="bgBorder"/>
