--- a/Controls/Node/NodeEndMA.xaml
+++ b/Controls/Node/NodeEndMA.xaml
@@ -7,10 +7,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="24"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="24"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Border Padding="6,0,6,0" Grid.Row="0"
-                Background="{StaticResource NodeBgBrush}" BorderBrush="{DynamicResource ThemeBrush}"
+                Background="{DynamicResource NodeBgBrush}" BorderBrush="{DynamicResource ThemeBrush}"
                 BorderThickness="1" CornerRadius="4">
             <Grid>
                 <Rectangle Margin="1"
@@ -18,14 +18,12 @@
                 <TextBox x:Name="titleBox" Margin="1"
                          Focusable="False" Background="Transparent"
                          ToolTip="{Binding Text, RelativeSource={RelativeSource Self}}"
-                         Template="{StaticResource textBoxTemplate}"
                          PreviewMouseDoubleClick="titleBox_PreviewMouseDoubleClick"
                          LostFocus="titleBox_LostFocus"/>
             </Grid>
         </Border>
         <StackPanel x:Name="answerContainer" Orientation="Vertical" Grid.Row="1"/>
         <Button x:Name="addBtn" Grid.Row="2" Width="40" Click="addBtn_Click"
-                Tag="t" 
-                Template="{StaticResource addAnswerButtonTemplate}"/>
+                Template="{DynamicResource addAnswerButtonTemplate}"/>
     </Grid>
 </c:NodeBase>
